--- a/styles.css
+++ b/styles.css
@@ -77,12 +77,21 @@ img {
     padding-bottom: 40px;
 }
 
+.stadium-img {
+    height: 300px;
+}
+
+
 }
 
 
 @media (min-width:600px) and (max-width: 1280px) {
     .flex-item {
         width: 50%;
+    }
+    
+    .stadium-img {
+        height: 300px;
     }
     
 }
